--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -10037,6 +10037,408 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        False\n",
+       "1        False\n",
+       "2        False\n",
+       "3         True\n",
+       "4         True\n",
+       "         ...  \n",
+       "29995     True\n",
+       "29996    False\n",
+       "29997    False\n",
+       "29998     True\n",
+       "29999     True\n",
+       "Name: PAY_AMT1, Length: 30000, dtype: bool"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.PAY_AMT1 >= 2000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>LIMIT_BAL</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th>MARRIAGE</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>PAY_0</th>\n",
+       "      <th>PAY_2</th>\n",
+       "      <th>PAY_3</th>\n",
+       "      <th>PAY_4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BILL_AMT4</th>\n",
+       "      <th>BILL_AMT5</th>\n",
+       "      <th>BILL_AMT6</th>\n",
+       "      <th>PAY_AMT1</th>\n",
+       "      <th>PAY_AMT2</th>\n",
+       "      <th>PAY_AMT3</th>\n",
+       "      <th>PAY_AMT4</th>\n",
+       "      <th>PAY_AMT5</th>\n",
+       "      <th>PAY_AMT6</th>\n",
+       "      <th>default.payment.next.month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28314.0</td>\n",
+       "      <td>28959.0</td>\n",
+       "      <td>29547.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>1069.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20940.0</td>\n",
+       "      <td>19146.0</td>\n",
+       "      <td>19131.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>36681.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>9000.0</td>\n",
+       "      <td>689.0</td>\n",
+       "      <td>679.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19394.0</td>\n",
+       "      <td>19619.0</td>\n",
+       "      <td>20024.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>1815.0</td>\n",
+       "      <td>657.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>500000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>542653.0</td>\n",
+       "      <td>483003.0</td>\n",
+       "      <td>473944.0</td>\n",
+       "      <td>55000.0</td>\n",
+       "      <td>40000.0</td>\n",
+       "      <td>38000.0</td>\n",
+       "      <td>20239.0</td>\n",
+       "      <td>13750.0</td>\n",
+       "      <td>13770.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>140000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12211.0</td>\n",
+       "      <td>11793.0</td>\n",
+       "      <td>3719.0</td>\n",
+       "      <td>3329.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>432.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29993</th>\n",
+       "      <td>29994</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>70626.0</td>\n",
+       "      <td>69473.0</td>\n",
+       "      <td>55004.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>111784.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29994</th>\n",
+       "      <td>29995</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>77519.0</td>\n",
+       "      <td>82607.0</td>\n",
+       "      <td>81158.0</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>3500.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29995</th>\n",
+       "      <td>29996</td>\n",
+       "      <td>220000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>88004.0</td>\n",
+       "      <td>31237.0</td>\n",
+       "      <td>15980.0</td>\n",
+       "      <td>8500.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>5003.0</td>\n",
+       "      <td>3047.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29998</th>\n",
+       "      <td>29999</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>52774.0</td>\n",
+       "      <td>11855.0</td>\n",
+       "      <td>48944.0</td>\n",
+       "      <td>85900.0</td>\n",
+       "      <td>3409.0</td>\n",
+       "      <td>1178.0</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>52964.0</td>\n",
+       "      <td>1804.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29999</th>\n",
+       "      <td>30000</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36535.0</td>\n",
+       "      <td>32428.0</td>\n",
+       "      <td>15313.0</td>\n",
+       "      <td>2078.0</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>1430.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16948 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID  LIMIT_BAL  SEX  EDUCATION  MARRIAGE  AGE  PAY_0  PAY_2  PAY_3  \\\n",
+       "3          4    50000.0    2          2         1   37      0      0      0   \n",
+       "4          5    50000.0    1          2         1   57     -1      0     -1   \n",
+       "5          6    50000.0    1          1         2   37      0      0      0   \n",
+       "6          7   500000.0    1          1         2   29      0      0      0   \n",
+       "8          9   140000.0    2          3         1   28      0      0      2   \n",
+       "...      ...        ...  ...        ...       ...  ...    ...    ...    ...   \n",
+       "29993  29994   100000.0    1          1         2   38      0     -1     -1   \n",
+       "29994  29995    80000.0    1          2         2   34      2      2      2   \n",
+       "29995  29996   220000.0    1          3         1   39      0      0      0   \n",
+       "29998  29999    80000.0    1          3         1   41      1     -1      0   \n",
+       "29999  30000    50000.0    1          2         1   46      0      0      0   \n",
+       "\n",
+       "       PAY_4  ...  BILL_AMT4  BILL_AMT5  BILL_AMT6  PAY_AMT1  PAY_AMT2  \\\n",
+       "3          0  ...    28314.0    28959.0    29547.0    2000.0    2019.0   \n",
+       "4          0  ...    20940.0    19146.0    19131.0    2000.0   36681.0   \n",
+       "5          0  ...    19394.0    19619.0    20024.0    2500.0    1815.0   \n",
+       "6          0  ...   542653.0   483003.0   473944.0   55000.0   40000.0   \n",
+       "8          0  ...    12211.0    11793.0     3719.0    3329.0       0.0   \n",
+       "...      ...  ...        ...        ...        ...       ...       ...   \n",
+       "29993      0  ...    70626.0    69473.0    55004.0    2000.0  111784.0   \n",
+       "29994      2  ...    77519.0    82607.0    81158.0    7000.0    3500.0   \n",
+       "29995      0  ...    88004.0    31237.0    15980.0    8500.0   20000.0   \n",
+       "29998      0  ...    52774.0    11855.0    48944.0   85900.0    3409.0   \n",
+       "29999      0  ...    36535.0    32428.0    15313.0    2078.0    1800.0   \n",
+       "\n",
+       "       PAY_AMT3  PAY_AMT4  PAY_AMT5  PAY_AMT6  default.payment.next.month  \n",
+       "3        1200.0    1100.0    1069.0    1000.0                           0  \n",
+       "4       10000.0    9000.0     689.0     679.0                           0  \n",
+       "5         657.0    1000.0    1000.0     800.0                           0  \n",
+       "6       38000.0   20239.0   13750.0   13770.0                           0  \n",
+       "8         432.0    1000.0    1000.0    1000.0                           0  \n",
+       "...         ...       ...       ...       ...                         ...  \n",
+       "29993    4000.0    3000.0    2000.0    2000.0                           0  \n",
+       "29994       0.0    7000.0       0.0    4000.0                           1  \n",
+       "29995    5003.0    3047.0    5000.0    1000.0                           0  \n",
+       "29998    1178.0    1926.0   52964.0    1804.0                           1  \n",
+       "29999    1430.0    1000.0    1000.0    1000.0                           1  \n",
+       "\n",
+       "[16948 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.PAY_AMT1 >= 2000]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
