--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -10439,6 +10439,377 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>LIMIT_BAL</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th>MARRIAGE</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>PAY_0</th>\n",
+       "      <th>PAY_2</th>\n",
+       "      <th>PAY_3</th>\n",
+       "      <th>PAY_4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BILL_AMT4</th>\n",
+       "      <th>BILL_AMT5</th>\n",
+       "      <th>BILL_AMT6</th>\n",
+       "      <th>PAY_AMT1</th>\n",
+       "      <th>PAY_AMT2</th>\n",
+       "      <th>PAY_AMT3</th>\n",
+       "      <th>PAY_AMT4</th>\n",
+       "      <th>PAY_AMT5</th>\n",
+       "      <th>PAY_AMT6</th>\n",
+       "      <th>default.payment.next.month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>463</th>\n",
+       "      <td>464</td>\n",
+       "      <td>230000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>99283.0</td>\n",
+       "      <td>97599.0</td>\n",
+       "      <td>96116.0</td>\n",
+       "      <td>120093.0</td>\n",
+       "      <td>8034.0</td>\n",
+       "      <td>3013.0</td>\n",
+       "      <td>4010.0</td>\n",
+       "      <td>5882.0</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>480</th>\n",
+       "      <td>481</td>\n",
+       "      <td>250000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1069.0</td>\n",
+       "      <td>919.0</td>\n",
+       "      <td>120041.0</td>\n",
+       "      <td>4435.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1069.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>67619.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>828</th>\n",
+       "      <td>829</td>\n",
+       "      <td>200000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>58</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>199646.0</td>\n",
+       "      <td>720.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>185652.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1065</th>\n",
+       "      <td>1066</td>\n",
+       "      <td>270000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>188064.0</td>\n",
+       "      <td>147915.0</td>\n",
+       "      <td>139976.0</td>\n",
+       "      <td>239104.0</td>\n",
+       "      <td>7098.0</td>\n",
+       "      <td>6179.0</td>\n",
+       "      <td>5023.0</td>\n",
+       "      <td>6090.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1386</th>\n",
+       "      <td>1387</td>\n",
+       "      <td>360000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>36</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>168014.0</td>\n",
+       "      <td>16209.0</td>\n",
+       "      <td>18918.0</td>\n",
+       "      <td>210000.0</td>\n",
+       "      <td>170000.0</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29666</th>\n",
+       "      <td>29667</td>\n",
+       "      <td>300000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11907.0</td>\n",
+       "      <td>3965.0</td>\n",
+       "      <td>18327.0</td>\n",
+       "      <td>118816.0</td>\n",
+       "      <td>11488.0</td>\n",
+       "      <td>11967.0</td>\n",
+       "      <td>3983.0</td>\n",
+       "      <td>18416.0</td>\n",
+       "      <td>6260.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29820</th>\n",
+       "      <td>29821</td>\n",
+       "      <td>400000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>385947.0</td>\n",
+       "      <td>305542.0</td>\n",
+       "      <td>271385.0</td>\n",
+       "      <td>423903.0</td>\n",
+       "      <td>15100.0</td>\n",
+       "      <td>14600.0</td>\n",
+       "      <td>13000.0</td>\n",
+       "      <td>9500.0</td>\n",
+       "      <td>9500.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29867</th>\n",
+       "      <td>29868</td>\n",
+       "      <td>340000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>29</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>286660.0</td>\n",
+       "      <td>263505.0</td>\n",
+       "      <td>268256.0</td>\n",
+       "      <td>300039.0</td>\n",
+       "      <td>13214.0</td>\n",
+       "      <td>12005.0</td>\n",
+       "      <td>13005.0</td>\n",
+       "      <td>10011.0</td>\n",
+       "      <td>12005.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29902</th>\n",
+       "      <td>29903</td>\n",
+       "      <td>170000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>161351.0</td>\n",
+       "      <td>126198.0</td>\n",
+       "      <td>124746.0</td>\n",
+       "      <td>168096.0</td>\n",
+       "      <td>6409.0</td>\n",
+       "      <td>7335.0</td>\n",
+       "      <td>4448.0</td>\n",
+       "      <td>4519.0</td>\n",
+       "      <td>5003.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29963</th>\n",
+       "      <td>29964</td>\n",
+       "      <td>610000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>347303.0</td>\n",
+       "      <td>248893.0</td>\n",
+       "      <td>269528.0</td>\n",
+       "      <td>323014.0</td>\n",
+       "      <td>1605.0</td>\n",
+       "      <td>349395.0</td>\n",
+       "      <td>250144.0</td>\n",
+       "      <td>271099.0</td>\n",
+       "      <td>220076.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>164 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID  LIMIT_BAL  SEX  EDUCATION  MARRIAGE  AGE  PAY_0  PAY_2  PAY_3  \\\n",
+       "463      464   230000.0    2          1         2   28      0      0      0   \n",
+       "480      481   250000.0    2          2         1   40      0      0      0   \n",
+       "828      829   200000.0    2          2         1   58     -1     -1     -1   \n",
+       "1065    1066   270000.0    2          2         1   25      0      0      0   \n",
+       "1386    1387   360000.0    1          1         2   36     -1     -1     -1   \n",
+       "...      ...        ...  ...        ...       ...  ...    ...    ...    ...   \n",
+       "29666  29667   300000.0    1          3         1   41     -1     -1     -1   \n",
+       "29820  29821   400000.0    1          2         2   37      1     -1      0   \n",
+       "29867  29868   340000.0    1          1         2   29     -1      0      0   \n",
+       "29902  29903   170000.0    1          3         2   30      0     -1      0   \n",
+       "29963  29964   610000.0    1          1         2   31      0     -1      2   \n",
+       "\n",
+       "       PAY_4  ...  BILL_AMT4  BILL_AMT5  BILL_AMT6  PAY_AMT1  PAY_AMT2  \\\n",
+       "463        0  ...    99283.0    97599.0    96116.0  120093.0    8034.0   \n",
+       "480        0  ...        0.0     1069.0      919.0  120041.0    4435.0   \n",
+       "828       -1  ...        0.0        0.0     1500.0  199646.0     720.0   \n",
+       "1065       0  ...   188064.0   147915.0   139976.0  239104.0    7098.0   \n",
+       "1386       0  ...   168014.0    16209.0    18918.0  210000.0  170000.0   \n",
+       "...      ...  ...        ...        ...        ...       ...       ...   \n",
+       "29666     -1  ...    11907.0     3965.0    18327.0  118816.0   11488.0   \n",
+       "29820      0  ...   385947.0   305542.0   271385.0  423903.0   15100.0   \n",
+       "29867      0  ...   286660.0   263505.0   268256.0  300039.0   13214.0   \n",
+       "29902      0  ...   161351.0   126198.0   124746.0  168096.0    6409.0   \n",
+       "29963     -1  ...   347303.0   248893.0   269528.0  323014.0    1605.0   \n",
+       "\n",
+       "       PAY_AMT3  PAY_AMT4  PAY_AMT5  PAY_AMT6  default.payment.next.month  \n",
+       "463      3013.0    4010.0    5882.0    3000.0                           0  \n",
+       "480         0.0    1069.0       0.0   67619.0                           0  \n",
+       "828         0.0       0.0    1500.0  185652.0                           0  \n",
+       "1065     6179.0    5023.0    6090.0    4000.0                           0  \n",
+       "1386   100000.0    3000.0    3000.0    5000.0                           0  \n",
+       "...         ...       ...       ...       ...                         ...  \n",
+       "29666   11967.0    3983.0   18416.0    6260.0                           0  \n",
+       "29820   14600.0   13000.0    9500.0    9500.0                           0  \n",
+       "29867   12005.0   13005.0   10011.0   12005.0                           0  \n",
+       "29902    7335.0    4448.0    4519.0    5003.0                           0  \n",
+       "29963  349395.0  250144.0  271099.0  220076.0                           0  \n",
+       "\n",
+       "[164 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.PAY_AMT1 >= 100000]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
