--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -4432,7 +4432,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1237163d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12e5e0cd0>"
       ]
      },
      "execution_count": 29,
@@ -8301,7 +8301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -8310,7 +8310,7 @@
        "(1319, 21)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8321,7 +8321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -8341,7 +8341,7 @@
        "Name: VisibilityLowMiles, Length: 1319, dtype: bool"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8352,7 +8352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -8738,7 +8738,7 @@
        "[517 rows x 21 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8749,7 +8749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -8791,7 +8791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -8811,7 +8811,7 @@
        "Name: VisibilityHighMiles, Length: 1319, dtype: bool"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8822,7 +8822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -9208,7 +9208,7 @@
        "[1314 rows x 21 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9219,7 +9219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9228,7 +9228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -9588,7 +9588,7 @@
        "[30000 rows x 25 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9599,7 +9599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -9608,7 +9608,7 @@
        "(30000, 25)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9619,7 +9619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -9817,7 +9817,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9828,7 +9828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -10026,7 +10026,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10037,7 +10037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -10057,7 +10057,7 @@
        "Name: PAY_AMT1, Length: 30000, dtype: bool"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10068,7 +10068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -10428,7 +10428,7 @@
        "[16948 rows x 25 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10439,7 +10439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -10799,7 +10799,7 @@
        "[164 rows x 25 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10807,6 +10807,155 @@
    "source": [
     "df[df.PAY_AMT1 >= 100000]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>LIMIT_BAL</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th>MARRIAGE</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>PAY_0</th>\n",
+       "      <th>PAY_2</th>\n",
+       "      <th>PAY_3</th>\n",
+       "      <th>PAY_4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BILL_AMT4</th>\n",
+       "      <th>BILL_AMT5</th>\n",
+       "      <th>BILL_AMT6</th>\n",
+       "      <th>PAY_AMT1</th>\n",
+       "      <th>PAY_AMT2</th>\n",
+       "      <th>PAY_AMT3</th>\n",
+       "      <th>PAY_AMT4</th>\n",
+       "      <th>PAY_AMT5</th>\n",
+       "      <th>PAY_AMT6</th>\n",
+       "      <th>default.payment.next.month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12330</th>\n",
+       "      <td>12331</td>\n",
+       "      <td>300000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30355.0</td>\n",
+       "      <td>26771.0</td>\n",
+       "      <td>23737.0</td>\n",
+       "      <td>505000.0</td>\n",
+       "      <td>331.0</td>\n",
+       "      <td>1070.0</td>\n",
+       "      <td>17771.0</td>\n",
+       "      <td>18000.0</td>\n",
+       "      <td>16079.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28716</th>\n",
+       "      <td>28717</td>\n",
+       "      <td>340000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>42</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>205931.0</td>\n",
+       "      <td>265431.0</td>\n",
+       "      <td>270237.0</td>\n",
+       "      <td>873552.0</td>\n",
+       "      <td>1215471.0</td>\n",
+       "      <td>889043.0</td>\n",
+       "      <td>621000.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>145000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID  LIMIT_BAL  SEX  EDUCATION  MARRIAGE  AGE  PAY_0  PAY_2  PAY_3  \\\n",
+       "12330  12331   300000.0    1          2         1   37      1     -1      2   \n",
+       "28716  28717   340000.0    2          1         3   42     -1     -1     -1   \n",
+       "\n",
+       "       PAY_4  ...  BILL_AMT4  BILL_AMT5  BILL_AMT6  PAY_AMT1   PAY_AMT2  \\\n",
+       "12330      0  ...    30355.0    26771.0    23737.0  505000.0      331.0   \n",
+       "28716     -1  ...   205931.0   265431.0   270237.0  873552.0  1215471.0   \n",
+       "\n",
+       "       PAY_AMT3  PAY_AMT4  PAY_AMT5  PAY_AMT6  default.payment.next.month  \n",
+       "12330    1070.0   17771.0   18000.0   16079.0                           0  \n",
+       "28716  889043.0  621000.0   20000.0  145000.0                           0  \n",
+       "\n",
+       "[2 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.PAY_AMT1 >= 500000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
