--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -10938,24 +10938,436 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        False\n",
+       "1        False\n",
+       "2        False\n",
+       "3        False\n",
+       "4        False\n",
+       "         ...  \n",
+       "29995    False\n",
+       "29996    False\n",
+       "29997    False\n",
+       "29998     True\n",
+       "29999    False\n",
+       "Name: PAY_AMT5, Length: 30000, dtype: bool"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.PAY_AMT5 >=20000 "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        True\n",
+       "1        True\n",
+       "2        True\n",
+       "3        True\n",
+       "4        True\n",
+       "         ... \n",
+       "29995    True\n",
+       "29996    True\n",
+       "29997    True\n",
+       "29998    True\n",
+       "29999    True\n",
+       "Name: PAY_AMT6, Length: 30000, dtype: bool"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.PAY_AMT6 <= 100000"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>LIMIT_BAL</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th>MARRIAGE</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>PAY_0</th>\n",
+       "      <th>PAY_2</th>\n",
+       "      <th>PAY_3</th>\n",
+       "      <th>PAY_4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BILL_AMT4</th>\n",
+       "      <th>BILL_AMT5</th>\n",
+       "      <th>BILL_AMT6</th>\n",
+       "      <th>PAY_AMT1</th>\n",
+       "      <th>PAY_AMT2</th>\n",
+       "      <th>PAY_AMT3</th>\n",
+       "      <th>PAY_AMT4</th>\n",
+       "      <th>PAY_AMT5</th>\n",
+       "      <th>PAY_AMT6</th>\n",
+       "      <th>default.payment.next.month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>320000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>49</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>70074.0</td>\n",
+       "      <td>5856.0</td>\n",
+       "      <td>195599.0</td>\n",
+       "      <td>10358.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>75940.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>195599.0</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>31</td>\n",
+       "      <td>230000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>27</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15339.0</td>\n",
+       "      <td>14307.0</td>\n",
+       "      <td>36923.0</td>\n",
+       "      <td>17270.0</td>\n",
+       "      <td>13281.0</td>\n",
+       "      <td>15339.0</td>\n",
+       "      <td>14307.0</td>\n",
+       "      <td>37292.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>38</td>\n",
+       "      <td>60000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6026.0</td>\n",
+       "      <td>-28335.0</td>\n",
+       "      <td>18660.0</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>1518.0</td>\n",
+       "      <td>2043.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>47671.0</td>\n",
+       "      <td>617.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>41</td>\n",
+       "      <td>360000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>628699.0</td>\n",
+       "      <td>195969.0</td>\n",
+       "      <td>179224.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>6000.0</td>\n",
+       "      <td>188840.0</td>\n",
+       "      <td>28000.0</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>75</td>\n",
+       "      <td>340000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>32</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4291.0</td>\n",
+       "      <td>80153.0</td>\n",
+       "      <td>25820.0</td>\n",
+       "      <td>5713.0</td>\n",
+       "      <td>23453.0</td>\n",
+       "      <td>4314.0</td>\n",
+       "      <td>80552.0</td>\n",
+       "      <td>25949.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29949</th>\n",
+       "      <td>29950</td>\n",
+       "      <td>280000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40939.0</td>\n",
+       "      <td>44290.0</td>\n",
+       "      <td>70573.0</td>\n",
+       "      <td>1652.0</td>\n",
+       "      <td>2144.0</td>\n",
+       "      <td>1666.0</td>\n",
+       "      <td>5015.0</td>\n",
+       "      <td>32013.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29954</th>\n",
+       "      <td>29955</td>\n",
+       "      <td>180000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14834.0</td>\n",
+       "      <td>1415.0</td>\n",
+       "      <td>47417.0</td>\n",
+       "      <td>2124.0</td>\n",
+       "      <td>1588.0</td>\n",
+       "      <td>1526.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>57317.0</td>\n",
+       "      <td>70052.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29963</th>\n",
+       "      <td>29964</td>\n",
+       "      <td>610000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>347303.0</td>\n",
+       "      <td>248893.0</td>\n",
+       "      <td>269528.0</td>\n",
+       "      <td>323014.0</td>\n",
+       "      <td>1605.0</td>\n",
+       "      <td>349395.0</td>\n",
+       "      <td>250144.0</td>\n",
+       "      <td>271099.0</td>\n",
+       "      <td>220076.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29972</th>\n",
+       "      <td>29973</td>\n",
+       "      <td>190000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29223.0</td>\n",
+       "      <td>19616.0</td>\n",
+       "      <td>148482.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>3869.0</td>\n",
+       "      <td>25128.0</td>\n",
+       "      <td>10115.0</td>\n",
+       "      <td>148482.0</td>\n",
+       "      <td>4800.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29998</th>\n",
+       "      <td>29999</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>52774.0</td>\n",
+       "      <td>11855.0</td>\n",
+       "      <td>48944.0</td>\n",
+       "      <td>85900.0</td>\n",
+       "      <td>3409.0</td>\n",
+       "      <td>1178.0</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>52964.0</td>\n",
+       "      <td>1804.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1250 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID  LIMIT_BAL  SEX  EDUCATION  MARRIAGE  AGE  PAY_0  PAY_2  PAY_3  \\\n",
+       "17        18   320000.0    1          1         1   49      0      0      0   \n",
+       "30        31   230000.0    2          1         2   27     -1     -1     -1   \n",
+       "37        38    60000.0    2          2         2   22      0      0      0   \n",
+       "40        41   360000.0    1          1         2   33      0      0      0   \n",
+       "74        75   340000.0    1          1         2   32     -1     -1     -1   \n",
+       "...      ...        ...  ...        ...       ...  ...    ...    ...    ...   \n",
+       "29949  29950   280000.0    1          1         1   39      0      0      0   \n",
+       "29954  29955   180000.0    1          2         2   30      0      0      0   \n",
+       "29963  29964   610000.0    1          1         2   31      0     -1      2   \n",
+       "29972  29973   190000.0    1          1         1   37      0      0      0   \n",
+       "29998  29999    80000.0    1          3         1   41      1     -1      0   \n",
+       "\n",
+       "       PAY_4  ...  BILL_AMT4  BILL_AMT5  BILL_AMT6  PAY_AMT1  PAY_AMT2  \\\n",
+       "17        -1  ...    70074.0     5856.0   195599.0   10358.0   10000.0   \n",
+       "30        -1  ...    15339.0    14307.0    36923.0   17270.0   13281.0   \n",
+       "37         0  ...     6026.0   -28335.0    18660.0    1500.0    1518.0   \n",
+       "40         0  ...   628699.0   195969.0   179224.0   10000.0    7000.0   \n",
+       "74        -1  ...     4291.0    80153.0    25820.0    5713.0   23453.0   \n",
+       "...      ...  ...        ...        ...        ...       ...       ...   \n",
+       "29949      0  ...    40939.0    44290.0    70573.0    1652.0    2144.0   \n",
+       "29954      0  ...    14834.0     1415.0    47417.0    2124.0    1588.0   \n",
+       "29963     -1  ...   347303.0   248893.0   269528.0  323014.0    1605.0   \n",
+       "29972      0  ...    29223.0    19616.0   148482.0    2000.0    3869.0   \n",
+       "29998      0  ...    52774.0    11855.0    48944.0   85900.0    3409.0   \n",
+       "\n",
+       "       PAY_AMT3  PAY_AMT4  PAY_AMT5  PAY_AMT6  default.payment.next.month  \n",
+       "17      75940.0   20000.0  195599.0   50000.0                           0  \n",
+       "30      15339.0   14307.0   37292.0       0.0                           0  \n",
+       "37       2043.0       0.0   47671.0     617.0                           0  \n",
+       "40       6000.0  188840.0   28000.0    4000.0                           0  \n",
+       "74       4314.0   80552.0   25949.0    2016.0                           0  \n",
+       "...         ...       ...       ...       ...                         ...  \n",
+       "29949    1666.0    5015.0   32013.0      12.0                           0  \n",
+       "29954    1526.0      66.0   57317.0   70052.0                           0  \n",
+       "29963  349395.0  250144.0  271099.0  220076.0                           0  \n",
+       "29972   25128.0   10115.0  148482.0    4800.0                           0  \n",
+       "29998    1178.0    1926.0   52964.0    1804.0                           1  \n",
+       "\n",
+       "[1250 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.PAY_AMT5 >=20000 ]"
+   ]
   },
   {
    "cell_type": "code",
