--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -4432,7 +4432,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x121b41bd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12b35b710>"
       ]
      },
      "execution_count": 29,
@@ -11547,7 +11547,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11fcbdf90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12b74c810>"
       ]
      },
      "execution_count": 77,
@@ -11788,8 +11788,8 @@
       "Dep. Variable:                  Sales   R-squared:                       0.816\n",
       "Model:                            OLS   Adj. R-squared:                  0.814\n",
       "Method:                 Least Squares   F-statistic:                     611.2\n",
-      "Date:                Tue, 13 Oct 2020   Prob (F-statistic):           1.52e-52\n",
-      "Time:                        13:51:05   Log-Likelihood:                -321.12\n",
+      "Date:                Mon, 19 Oct 2020   Prob (F-statistic):           1.52e-52\n",
+      "Time:                        12:40:24   Log-Likelihood:                -321.12\n",
       "No. Observations:                 140   AIC:                             646.2\n",
       "Df Residuals:                     138   BIC:                             652.1\n",
       "Df Model:                           1                                         \n",
@@ -12024,7 +12024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -12041,7 +12041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -12280,7 +12280,7 @@
        "24     96     93     95    192"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12291,16 +12291,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x12d57ad90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12e8eed10>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -12324,7 +12324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -12341,7 +12341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -12456,7 +12456,7 @@
        "10  166  72  217"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12467,16 +12467,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x12e907c10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12e9c0c10>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -12496,6 +12496,114 @@
    "source": [
     "plt.figure(figsize=(16,8))\n",
     "sns.heatmap(df.corr(), cmap='Blues', annot=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11 entries, 0 to 10\n",
+      "Data columns (total 3 columns):\n",
+      "X1    11 non-null int64\n",
+      "X2    11 non-null int64\n",
+      "X3    11 non-null int64\n",
+      "dtypes: int64(3)\n",
+      "memory usage: 392.0 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X1</th>\n",
+       "      <th>X2</th>\n",
+       "      <th>X3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>132</td>\n",
+       "      <td>52</td>\n",
+       "      <td>173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>143</td>\n",
+       "      <td>59</td>\n",
+       "      <td>184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>153</td>\n",
+       "      <td>67</td>\n",
+       "      <td>194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>162</td>\n",
+       "      <td>73</td>\n",
+       "      <td>211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>154</td>\n",
+       "      <td>64</td>\n",
+       "      <td>196</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    X1  X2   X3\n",
+       "0  132  52  173\n",
+       "1  143  59  184\n",
+       "2  153  67  194\n",
+       "3  162  73  211\n",
+       "4  154  64  196"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
